feat(client): publish DaemonSession, the protocol as an interface (#33)
`DaemonClient` is a concrete class that owns a stdio transport and a
reader thread. A consumer wanting the *calls* without those had no way
to say so, so compose-ai-tools declared its own `RenderSession` and
wrote `DaemonClientRenderSession` to bridge them — 311 lines in which
every method is a one-line forward. The next embedder writes the same
file, because the missing piece is the same: a name for "a daemon you
can talk to" that is not also "a subprocess over pipes".

`DaemonSession` is that name. All 23 methods, same parameters, same
defaults — an extraction, not a redesign. `DaemonClient` implements it.

Two tests, guarding the two ways this decays:

- `DaemonSessionConformanceTest` fails when a public method is added to
  `DaemonClient` and left off the interface. The compiler proves the
  easy direction; nothing but this proves the other, and silent
  incompleteness is exactly how an extracted interface stops being worth
  reaching for.
- A compile-only function pins that defaults stay reachable through both
  static types. It is never invoked: compiling *is* the assertion.

Binary compatibility: moving the defaults onto the interface removes 19
`$default` bridges from `DaemonClient` (visible in the ABI dump) and
adds the equivalents on `DaemonSession$DefaultImpls`. Source-compatible;
callers recompiled against this release are fine, already-compiled ones
are not. Both consumers rebuild from published coordinates, and the
third parties this work exists to enable do not exist yet — so the cost
of doing it now is the lowest it will ever be.

Records the three decisions the design doc had left open, with the
reasoning: the seam plus its negative rule, the runtime-location split
(interface in core, resolver as a separate artifact), and ManagedDaemon
as event-emitting rather than policy-taking.